remove harmful padding from centered button bar

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         Browse map
                     </a>
             </div>
-            <div data-role="content" style="position: absolute; width: 100%; bottom: 0; text-align: center">
+            <div data-role="content" style="position: absolute; width: 100%; bottom: 0; text-align: center; padding-left: 0; padding-right: 0">
                         <fieldset data-role="controlgroup" data-type="horizontal" data-shadow="true" style="display: inline-block">
                             <label><input type="checkbox" name="usetransit" checked="checked"><img src="static/images/bus_stop.svg" style="height: 20px;" /></input></label>
                         </fieldset>
