--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="static/css/jquery.mobile-1.3.1.min.css" />
+        <link rel="stylesheet" href="static/css/jqm-icon-pack-2.0-original.css" />
         <link rel="stylesheet" href="static/css/leaflet.css" />
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" />
