--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             </div>
             <div data-role="content" style="position: absolute; width: 100%; bottom: 0; text-align: center; padding-left: 0; padding-right: 0">
                         <fieldset data-role="controlgroup" data-type="horizontal" data-shadow="true" style="display: inline-block">
-                            <label><input type="checkbox" name="usetransit" checked="checked"><img src="static/images/bus_stop.svg" style="height: 20px;" /></input></label>
+                            <label><input type="checkbox" name="usetransit" checked="checked"><img class="iconprovider-bus_stop" style="height: 20px;" /></input></label>
                         </fieldset>
                         <fieldset id="vehiclesettings" data-role="controlgroup" data-type="horizontal" data-shadow="true" style="display: inline-block">
-                            <label><input type="radio" name="vehiclesettings" value="WALK" checked="checked"><img src="static/images/walking.svg" style="height: 20px;"/></input></label>
-                            <label><input type="radio" name="vehiclesettings" value="BICYCLE"><img src="static/images/bicycle.svg" style="height: 20px;"/></input></label>
-                            <label><input type="radio" name="vehiclesettings" value="CAR"><img src="static/images/car.svg" style="height: 20px;"/></input></label>
+                            <label><input type="radio" name="vehiclesettings" value="WALK" checked="checked"><img class="iconprovider-walking" style="height: 20px;"/></input></label>
+                            <label><input type="radio" name="vehiclesettings" value="BICYCLE"><img class="iconprovider-bicycle" style="height: 20px;"/></input></label>
+                            <label><input type="radio" name="vehiclesettings" value="CAR"><img class="iconprovider-car" style="height: 20px;"/></input></label>
                         </fieldset>
             </div>
             <div id="front-page-menu" data-role="popup">
@@ -210,10 +210,10 @@
                 <ul data-role="listview" style="margin-bottom: 0">
                     <li>
                         <fieldset id="modesettings" data-role="controlgroup" data-type="horizontal">
-                            <label><input type="checkbox" name="BUS"><img class="iconprovider-bus_stop" style="height: 20px;"></input></label>
-                            <label><input type="checkbox" name="TRAM"><img class="iconprovider-tram_stop" style="height: 20px;"></input></label>
-                            <label><input type="checkbox" name="RAIL"><img class="iconprovider-train_station2" style="height: 20px;"></input></label>
-                            <label><input type="checkbox" name="SUBWAY"><img class="iconprovider-subway" style="height: 20px;"></input></label>
+                            <label><input type="checkbox" name="BUS"><img class="iconprovider-bus_stop" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="TRAM"><img class="iconprovider-tram_stop" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="RAIL"><img class="iconprovider-train_station2" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="SUBWAY"><img class="iconprovider-subway" style="height: 20px;"/></input></label>
                         </fieldset>
                     </li>
                     <li>
@@ -259,12 +259,23 @@
                 });
             });
         }
+        
+        // Once pages have been created modify their structure for img elements that have the iconprovider class
+        jQuery(document).on('pagecreate', '#front-page', function() {
+            citynavi.iconprovider.modify_img_elements(this);
+        });
+        jQuery(document).on('pagecreate', '#settings', function() {
+            citynavi.iconprovider.modify_img_elements(this);
+        });
+        
         </script>
         <!-- Initialization related code -->
         <script src="static/js/init.js"></script>
         <!-- Configure the geographical area where the app is to be used in -->
         <script src="static/js/config.js"></script>
         <script src="static/js/local_config.js"></script>
+        <!-- Providing svg or png icons depending of the support by the web browser. -->
+        <script src="static/js/iconprovider.js"></script>
         <!-- "Colorful iconic & retina-proof markers for Leaflet,
              based on the Font Awesome/Twitter Bootstrap icons" -->
         <script src="static/js/leaflet-awesome-markers.js"></script>
