add padding below search results to counter hovering footer buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- "Search box" with the list of results for the location that the user wants to go to. -->
                 <ul id="navigate-to-input" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Where do you want to go?"></ul>
             </div>
-            <div data-role="content" style="padding-bottom: 0; text-align: right">
+            <div data-role="content" style="height: 63px; text-align: right">
             </div>
             <div data-role="content" style="position: absolute; width: 100%; bottom: 0; text-align: center; padding-left: 0; padding-right: 0">
                         <fieldset data-role="controlgroup" data-type="horizontal" data-shadow="true" style="display: inline-block">
