--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                       <h3>Browse map</h3>
                       <p>Calculate routes and browse for points of interest.</p>
                   </a></li>
+                  <li><a href="#live-page">
+                      <h3>View live map</h3>
+                      <p>Get a real-time overview of vehicle positions.</p>
+                  </a></li>
                 </ul>
             </div>
         </div>
@@ -225,6 +229,13 @@
                         <label for="prefer-free">Prefer free routes</label>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <!-- Live map page -->
+        <div id="live-page" data-role="page">
+            <div data-role="header" data-theme="b">
+                <a href="" data-rel="back">Back</a>
+                <h1>Live map</h1>
             </div>
         </div>
         <script src="static/js/jquery-1.8.3.min.js"></script>
