navigation instructions and option for speech synthesis

--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
                         <input type="checkbox" name="prefer-free" id="prefer-free" />
                         <label for="prefer-free">Prefer free routes</label>
                     </li>
+                    <li>
+                        <input type="checkbox" name="use-speech" id="use-speech" />
+                        <label for="use-speech">Speak navigation instructions</label>
+                    </li>
                 </ul>
             </div>
         </div>
