implement simulation for itinerary preview and testing

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
             </div>
             <div id="map-page-menu" data-role="popup">
                 <ul data-role="listview" data-inset="true">
+                  <li><a href="#navigation-page" class="journey-preview-link">
+                      <h3>Preview journey</h3>
+                      <p>Start viewing a simulation.</p>
+                  </a></li>
                   <li><a href="#settings">
                       <h3>Settings</h3>
                       <p>Access the routing settings.</p>
@@ -249,6 +253,7 @@
         <script src="static/js/backbone-min.js"></script>
         <script src="static/js/moment.min.js"></script>
         <script src="static/js/leaflet-osm-notes.js"></script>
+        <script src="static/js/leaflet.geometryutil.js"></script>
         <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
         <script>
         // Functional testing with TestEm using mocha+chai-framework.
