implement navigation/simulation pause button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div id="navigation-page" data-role="page">
             <div data-role="header" data-theme="b" style="text-align: center">
                 <a href="" data-rel="back">Back</a>
-                <h1 style="margin-bottom: 0; margin-top: 0"><a data-icon="pause" data-role="button" data-inline="true" style="margin-top: 3px; margin-bottom: 7px">Pause</a></h1>
+                <h1 style="margin-bottom: 0; margin-top: 0"><a data-icon="pause" data-role="button" class="pause-navigation-link" data-inline="true" style="margin-top: 3px; margin-bottom: 7px">Pause</a></h1>
                 <a href="#navigation-page-menu" data-icon="menu" class="ui-btn-right" data-rel="popup" data-iconpos="notext" data-transition="slidedown">Menu</a>
             </div>
             <div data-role="footer" data-position="fixed" style="padding: 0; margin: 0; border: 0; overflow: visible;">
