--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Navigator</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="static/css/jquery.mobile-1.3.1.min.css" />
         <link rel="stylesheet" href="static/css/jqm-icon-pack-2.0-original.css" />
