Adds heading direction
The current position marker become an arrow
when the heading direction is available.

--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
         <!-- Palvelukartta is not currently used. It utilizes
              REST API for City of Helsinki Service Map -->
         <script src="static/js/palvelukartta.js"></script>
+        <!-- Marker rotated with css transform -->
+        <script src="static/js/rotatedmarker.js"></script>
         <!-- Handles routing and map drawing -->
         <script src="static/js/routing.js"></script>
         <!-- Handles autocompletion related tasks for the "Where do you want to go?"
