Show airplane icons and route

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                             <label><input type="checkbox" name="TRAM"><img src="static/images/tram_stop.svg" style="height: 20px;"/></input></label>
                             <label><input type="checkbox" name="RAIL"><img src="static/images/train_station2.svg" style="height: 20px;"/></input></label>
                             <label><input type="checkbox" name="SUBWAY"><img src="static/images/subway.svg" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="AIRPLANE"><img src="static/images/airplane.svg" style="height: 20px;"/></input></label>
                         </fieldset>
                     </li>
                     <li>
