yellow test ribbon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" />
         <link rel="stylesheet" href="static/css/leaflet.awesome-markers.css" />
+        <link rel="stylesheet" href="static/css/ribbon.css" />
         <style>
             /* Hide all the app pages until jQuery Mobile inits to
                avoid the Flash of Unstyled Content */
@@ -34,6 +35,11 @@
     </head>
     <body>
         <noscript>Error: No Javascript available in your browser.</noscript>
+
+        <div class="ribbon-wrapper">
+            <div class="ribbon">Test</div>
+        </div>
+
         <div id="splashscreen" class="splashscreen" style="display: none"></div>
         <script>
             // Show the splash screen with a loading message
