--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <noscript>Error: No Javascript available in your browser.</noscript>
 
         <div class="ribbon-wrapper">
-            <div class="ribbon">Test</div>
+            <div class="ribbon"><p style="padding-left: 20px;">Test only <br>Send feedback<br> from front page</p></div>
         </div>
 
         <div id="splashscreen" class="splashscreen" style="display: none"></div>
